# PISmith

./: .gitignore  AGENTS.md  LICENSE  README.md  merge_meta_secalign.py  pyproject.toml  sky_injecagent.yaml  train.py
benchmarks/injecagent/: reward.py
configs/: accelerate.yaml  injecagent.yaml
core/: trainer.py  utils.py
defenses/attentiontracker/AttentionTracker/models/: attn_model.py  attn_model_nsys.py
defenses/datasentinel/OpenPromptInjection/models/: DeepSeek.py  Flan.py  Internlm.py  Llama.py
defenses/secalign/: defense_secalign.py
eval/: eval_agentdojo.py  eval_injecagent.py  eval_piarena.py
scripts/: train_injecagent.sh
