[project]
name = "pismith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13.0"
dependencies = [
    "trl==0.24.0",
    "accelerate",
    "transformers==4.56.1",
    "datasets",
    "agentdojo",
    "vllm==0.10.2",
    "peft>=0.18.1",
    "nltk>=3.9.3",
    "wandb>=0.25.1",
    "weave>=0.52.35",
    "kernels>=0.12.3",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
rl_attack = "."

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
